# design-patterns

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt
design_patterns/: README.md
design_patterns/src/challenge2/: challenge.py  document_converter.py
design_patterns/src/challenge3/: customer_manager_tobi.py
design_patterns/src/challenge5/: challenge.py  decorator_mathis.py
design_patterns/tests/: __init__.py  test_challenge1.py  test_challenge2.py  test_challenge3.py
load_balancing/: Dockerfile  README.md  compose.yaml  main.py  nginx.conf
load_balancing/nginx/: default.conf.template
src/: __init__.py
src/challenge1/: __init__.py  challenge.py  example.py  issue.py  observers.py
src/challenge2/: challenge.py  document_converter.py  document_converter_mathis.py
src/challenge3/: customer_manager.py
src/challenge4/: challenge.py
src/challenge5/: challenge.py  decorator_mathis.py
tests/: __init__.py  test_challenge1.py  test_challenge2.py  test_challenge3.py
