[project]
name = "design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==24.1.1",
    "flake8==7.0.0",
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "ruff==0.2.1",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".ruff_cache",
    "migrations",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "notebooks",
    "_build",
    "build",
    "dist",
    "migrations",
    "node_modules",
    "static",
]

indent-width = 4
line-length = 100
target-version = "py312"
